--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -1,70 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="110dp"
     android:layout_weight="7"
-    android:background="@android:color/transparent"
+    android:background="@color/item_divider"
     android:descendantFocusability="blocksDescendants"
-    android:orientation="horizontal"
-    android:padding="8dp">
+    android:orientation="vertical"
+    android:paddingBottom="9dp"
+    android:paddingEnd="7dp"
+    android:paddingStart="7dp">
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="4dp">
-
-        <ImageView
-            android:id="@+id/image_entry"
-            android:layout_width="70dp"
-            android:layout_height="50dp" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="7"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:layout_marginBottom="5dp"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:scrollHorizontally="true"
-            android:shadowColor="#000"
-            android:shadowRadius="1.0"
-            android:text="This is news title"
-            android:textColor="#666666"
-            android:textSize="20sp" />
-
+        android:background="@color/item_background"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="1">
+            android:layout_width="273dp"
+            android:layout_height="match_parent"
+            android:layout_margin="7dp"
+            android:layout_weight="7"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/author"
-                android:layout_width="wrap_content"
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
+                android:layout_marginBottom="5dp"
+                android:ellipsize="end"
+                android:fontFamily="serif"
+                android:maxLines="2"
+                android:scrollHorizontally="true"
+                android:shadowColor="#000"
+                android:shadowRadius="1.0"
+                android:text="This is news title"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:typeface="sans" />
+
+
+            <LinearLayout
+                android:layout_width="131dp"
                 android:layout_height="wrap_content"
-                android:text="News Author"
-                android:textColor="#42A5F5"
-                android:textSize="15sp" />
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <TextView
+                    android:id="@+id/author"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="News Author"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="14sp" />
+
+
+            </LinearLayout>
 
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/image_entry"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
     </LinearLayout>
-
-
 </LinearLayout>
 
 
