new api and webview implemented: danfeng, next:fragment_entry

--- a/app/src/main/res/layout/fragment_bbc_list.xml
+++ b/app/src/main/res/layout/fragment_bbc_list.xml
@@ -2,10 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.newnews.newnews.WorldFragment">
+    tools:context="com.newnews.newnews.BBCFragment">
 
     <ListView
-        android:id="@+id/listview"
+        android:id="@+id/listview_bbc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
