--- a/app/src/main/res/layout/list_row_recycler.xml
+++ b/app/src/main/res/layout/list_row_recycler.xml
@@ -26,7 +26,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/title_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="62dp"
                 android:layout_marginBottom="5dp"
@@ -49,7 +49,7 @@
                 android:weightSum="1">
 
                 <TextView
-                    android:id="@+id/author"
+                    android:id="@+id/author_recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="News Author"
@@ -70,7 +70,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/image_entry"
+                android:id="@+id/image_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
