--- a/app/src/main/res/layout/list_row_recycler.xml
+++ b/app/src/main/res/layout/list_row_recycler.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="130dp"
     android:layout_weight="7"
     android:background="@color/item_divider"
     android:descendantFocusability="blocksDescendants"
@@ -28,11 +28,11 @@
             <TextView
                 android:id="@+id/title_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="62dp"
+                android:layout_height="80dp"
                 android:layout_marginBottom="5dp"
                 android:ellipsize="end"
                 android:fontFamily="serif"
-                android:maxLines="2"
+                android:maxLines="3"
                 android:scrollHorizontally="true"
                 android:shadowColor="#000"
                 android:shadowRadius="1.0"
@@ -43,14 +43,14 @@
 
 
             <LinearLayout
-                android:layout_width="131dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:weightSum="1">
 
                 <TextView
                     android:id="@+id/author_recycler"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="News Author"
                     android:textAlignment="center"
