--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,9 +6,9 @@
         android:orderInCategory="100"
         android:title="@string/action_help"
         app:showAsAction="never" />
-    <item
+    <!--<item
         android:id="@+id/action_about"
         android:orderInCategory="100"
         android:title="@string/action_about"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
 </menu>
