--- a/app/src/main/res/layout/dialog_register.xml
+++ b/app/src/main/res/layout/dialog_register.xml
@@ -10,8 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="Online help is not available. Please contact us at:"/>
+        android:layout_alignParentTop="true" />
 
     <LinearLayout
         android:id="@+id/phone_linear"
@@ -21,25 +20,27 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="64dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight=".5"
             app:srcCompat="@drawable/ic_action_call" />
 
         <TextView
             android:id="@+id/phoneText"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="070 6556 303"
-            android:textAlignment="textStart"
-            android:textSize="18sp" />
+            android:text="Username:"
+            android:textAlignment="center"
+            android:textSize="16sp" />
 
-        <TextView
+        <EditText
+            android:id="@+id/usernameText"
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_weight="1"
-            android:text="call" />
+            android:layout_height="match_parent"
+            android:layout_weight="8"
+            android:textAlignment="center"
+            android:textSize="10sp" />
     </LinearLayout>
 
 
@@ -50,24 +51,26 @@
         android:layout_below="@+id/phone_linear">
 
         <ImageView
-            android:layout_width="66dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight=".5"
             app:srcCompat="@drawable/ic_action_mail" />
 
         <TextView
-            android:id="@+id/mailText"
-            android:layout_width="200dp"
+            android:id="@+id/passwordTextView"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="support@newNEWS.com"
-            android:textAlignment="textStart"
-            android:textSize="18sp" />
+            android:text="Password:"
+            android:textAlignment="center"
+            android:textSize="16sp" />
 
-        <TextView
+        <EditText
+            android:id="@+id/passwordText"
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_weight="1"
-            android:text="mail" />
+            android:layout_height="match_parent"
+            android:layout_weight="8"
+            android:textAlignment="center"
+            android:textSize="10sp" />
     </LinearLayout>
 </RelativeLayout>
