--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,23 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_help"
+        android:id="@+id/action_contact"
         android:orderInCategory="100"
-        android:title="@string/action_help"
+        android:title="@string/action_contact"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/action_register"
-        android:orderInCategory="100"
-        android:title="@string/action_register"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_signin"
-        android:orderInCategory="100"
-        android:title="@string/action_signin"
-        app:showAsAction="never" />
-    <!--<item
-        android:id="@+id/action_about"
-        android:orderInCategory="100"
-        android:title="@string/action_about"
-        app:showAsAction="never" />-->
 </menu>
