--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="colorAccent">#FF4081</color>
     <color name="item_divider">#f8f8f9</color>
     <color name="item_background">#fdfdfe</color>
+
+    <color name="black_overlay">#66000000</color>
+    <color name="lightorange">#f8a75c</color>
+    <color name="lightorangedark">#ec7b39</color>
+
 </resources>
