--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,19 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/app_bar_search"
+        app:actionViewClass="android.widget.SearchView"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="Search" />
+    <item
         android:id="@+id/action_help"
         android:orderInCategory="100"
         android:title="@string/action_help"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_register"
-        android:orderInCategory="100"
-        android:title="@string/action_register"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_signin"
-        android:orderInCategory="100"
-        android:title="@string/action_signin"
         app:showAsAction="never" />
     <!--<item
         android:id="@+id/action_about"
