--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -21,6 +21,12 @@
 
         </android.support.v7.widget.Toolbar>
 
+        <SearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
