--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -1,4 +1,5 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,53 +7,97 @@
     android:paddingRight="16dp"
     tools:context="com.newnews.newnews.CreateFragment">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-
-        <LinearLayout
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/title_create"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="13dp"
-                android:layout_marginBottom="13dp"
-                android:text="@string/news_title"
-                android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:hint="@string/title"
+                android:textColor="@android:color/black" />
 
-            <ImageView
-                android:id="@+id/bodyImg_create"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:src="@mipmap/ic_launcher_round"
-                tools:ignore="ContentDescription" />
+        </android.support.design.widget.TextInputLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:orientation="horizontal">
 
             <EditText
+                android:id="@+id/time_create"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/time"
+                android:textSize="14sp"
+                android:clickable="true"
+                android:focusable="false"/>
+
+            <EditText
+                android:id="@+id/author_create"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/author"
+                android:textAlignment="viewEnd"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/bodyImg_create"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:src="@mipmap/ic_launcher_round"
+            tools:ignore="ContentDescription" />
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/bodyImgDescription_create"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/image_description"
+                android:hint="@string/image_description"
                 android:textAppearance="@android:style/TextAppearance.Material.Small" />
 
+        </android.support.design.widget.TextInputLayout>
 
-            <EditText
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/content_create"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:text="@string/new_content"
-                android:textAppearance="@android:style/TextAppearance.Material.Small" />
+                android:hint="@string/content"
+                android:textColor="@android:color/black" />
+        </android.support.design.widget.TextInputLayout>
 
 
-        </LinearLayout>
-    </ScrollView>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/upload_fat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_gravity="end|bottom"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/ic_action_upload"
+            app:backgroundTint="@android:color/holo_red_light"
+            app:fabSize="normal" />
+    </LinearLayout>
 
-</FrameLayout>
+
+
+</ScrollView>
