--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,9 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingEnd="16dp"
-    android:paddingStart="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     tools:context="com.newnews.newnews.DetailFragment">
 
     <ScrollView
@@ -20,13 +21,35 @@
                 android:id="@+id/title_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="13dp"
-                android:layout_marginBottom="13dp"
+                android:layout_marginBottom="16dp"
                 android:text="@string/news_title"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="19dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/time_detail"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Time"
+                    android:textAlignment="viewStart" />
+
+                <TextView
+                    android:id="@+id/author_detail"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Author"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/colorPrimary" />
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/bodyImg"
@@ -36,7 +59,7 @@
                 tools:ignore="ContentDescription" />
 
             <TextView
-                android:id="@+id/bodyImgDescription"
+                android:id="@+id/bodyImgDescription_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/image_description"
@@ -44,11 +67,11 @@
 
 
             <TextView
-                android:id="@+id/content"
+                android:id="@+id/content_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
-                android:text="@string/new_content"
+                android:text="@string/news_content"
                 android:textAlignment="textStart"
                 android:textColor="@android:color/black"
                 android:textSize="15sp" />
