--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -15,14 +15,14 @@
             android:id="@+id/title_create"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Title"
+            android:hint="@string/title"
             android:textColor="@android:color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:orientation="horizontal">
-            <EditText
+            <TextView
                 android:id="@+id/time_create"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
                 android:hint="@string/time"
                 android:textSize="14sp"
                 android:clickable="true"
-                android:focusable="false"/>
+                android:focusable="true"/>
             <EditText
                 android:id="@+id/author_create"
                 android:layout_width="0dp"
@@ -61,6 +61,12 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/content"
                 android:textColor="@android:color/black" />
+
+        <EditText
+            android:id="@+id/link_create"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/webpage" />
 
     </LinearLayout>
 
