--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="lightorange">#f8a75c</color>
     <color name="lightorangedark">#ec7b39</color>
 
+    <color name="colorButton">#4277b1</color>
 </resources>
